# usbbluetooth

./: README.md  Usage.md  meson.build
.github/workflows/: build.yml  codeql.yml  scorecard.yml
doc/: Architecture.md  README.md
examples/: README.md  devices.c
src/: meson.build
src/libusbbluetooth/: device.h  hci.h  meson.build  usbbluetooth.h  usbbluetooth_core.c  usbbluetooth_core.h  usbbluetooth_device.c  usbbluetooth_device.h  usbbluetooth_err.c  usbbluetooth_err.h  usbbluetooth_io.c  usbbluetooth_io.h  usbbluetooth_log.c  usbbluetooth_log.h  utils.c  utils_libusb.c  utils_libusb.h  utils_ser.c  utils_ser.h
src/libusbbluetooth/libserialport/: device.c  device.h  io.c  io.h  meson.build  utils.c  utils.h
src/libusbbluetooth/libusb/: device.c  device.h  io.c  io.h  meson.build  utils.c  utils.h
src/usbbt/: meson.build
subprojects/: argtable3.wrap  cwalk.wrap  libusb.wrap
